# rama-lang

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  Makefile  README.html  README.md  compile_and_run.sh  default.nix  flake.nix  justfile  package.nix  setup.sh
include/: ast.hpp  common.hpp  lexer.hpp  parser.hpp  sema.hpp  tir.hpp  token.hpp  uir.hpp
lib/std/: string.ra  string.rama  vec.rama
src/: ast.cpp  ast.rs  lexer.cpp  lexer.rs  lib.rs  main.cpp  main.rs  metadata.rs  parser.cpp  parser.rs  scope.rs  sema.rs  tast.rs  tir.rs  tirbuilder.rs  token.cpp  tokens.rs  ty.rs  typed_ast.rs  types.rs  uir.rs  uirgen.rs  valuescope.rs
src/ast/: mod.rs  printer.rs  untyped.rs  visit.rs
src/backend/: c.rs  llvm.rs  mod.rs
src/lexer/: mod.rs  position.rs  token.rs
src/rair/: builder.rs  mod.rs
src/ril/: builder.rs  mod.rs
src/sema/: error.rs  frame.rs  mod.rs  scope.rs  types.rs
test/: basic1.ra  basic1.rama  factorial.rama  generics.rama  import.rama  type1.rama
