[package]
name = "rama-lang"
version = "0.1.0"
edition = "2024"
description = "A small WIP compiler for a new programming language"
authors = [ "James Barnfather" ]

[profile.dev]
opt-level = 1

[dependencies]
phf = { version = "0.11.3", features = [ "macros" ] }

strum = "0.27.1"
strum_macros = "0.27.1"

derive_more = { version = "2.0.1", features = [ "display" ] }

clap = { version = "4.5.34", features = [ "derive" ] }
clap_complete = "4.5.47"

log = "0.4.27"
env_logger = "0.11.7"

itertools = "0.14.0"

llvm-sys = "201.0.0-rc1"