[package]
name = "rama-lang"
version = "0.1.0"
edition = "2024"
description = "A small WIP compiler for a new programming language"
authors = [ "James Barnfather" ]

[dependencies]
phf = { version = "0.11.3", features = [ "macros" ] }

strum = "0.27.1"
strum_macros = "0.27.1"

derive_more = { version = "2.0.1", features = [ "display", "from", "into" ] }

clap = { version = "4.5.34", features = [ "derive" ] }
clap_complete = "4.5.47"

log = "0.4.27"
env_logger = "0.11.7"

itertools = "0.14.0"
ffi-convert = "0.6.2"
typed-index-collections = { version = "3.2.3", featerus = [ "alloc" ] }

llvm-sys = "201.0.0-rc1"
