[package]
name = "rama-lang"
version = "0.1.0"
edition = "2024"
description = "A small WIP compiler for a new programming language"
authors = [ "James Barnfather" ]

[dependencies]
phf = { version = "0.11.3", features = [ "macros" ] }

strum_macros = "0.27.1"

derive_more = { version = "2.0.1", features = [ "display", "from", "into", "add", "error" ] }
either = "1.15.0"

clap = { version = "4.5.34", features = [ "derive" ] }
clap_complete = "4.5.47"

itertools = "0.14.0"
typed-index-collections = { version = "3.2.3", features = [ "alloc" ] }
indexmap = "2.9.0"
bumpalo = "3.17.0"

llvm-sys = "201.0.0-rc1"
thiserror = "2.0.12"
typed-arena = "2.0.2"